--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,3 +38,12 @@ iframe#tela{
     width: 269px;
     height: 471px;
 }
+section#redes{
+    text-align: right;
+}
+section#redes img{
+    width: 50px;
+    border-radius: 50% ;
+    margin: 10px;
+    box-shadow:  2px 2px 5px black;
+}
