--- a/estilos/style.css
+++ b/estilos/style.css
@@ -45,5 +45,13 @@ section#redes img{
     width: 50px;
     border-radius: 50% ;
     margin: 10px;
-    box-shadow:  2px 2px 5px black;
+    box-shadow:  2px 2px 5px rgba(0, 0, 0, 0.603);
+    box-sizing: border-box;
+}
+section#redes img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.61);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.61);
+    transition: transform .3s, border .3s;
+
 }
